[gd_scene load_steps=15 format=3 uid="uid://bqr7sjy8okd6v"]

[ext_resource type="Script" path="res://gamedata/movies/loadingscreen/loadingscreen.gd" id="1_gp3sa"]
[ext_resource type="Texture2D" uid="uid://cfvflda44hcy1" path="res://gamedata/movies/loadingscreen/spaceleftblank1.png" id="2_dfvbi"]
[ext_resource type="Texture2D" uid="uid://uarswstepmn5" path="res://gamedata/movies/loadingscreen/spaceleftblank2.png" id="3_0qfbe"]
[ext_resource type="Texture2D" uid="uid://u6ypce87pjdv" path="res://gamedata/movies/loadingscreen/spaceleftblank3.png" id="4_2ymtf"]
[ext_resource type="Texture2D" uid="uid://bnr5kissuewhp" path="res://gamedata/movies/loadingscreen/spaceleftblank4.png" id="5_v1ipe"]
[ext_resource type="Texture2D" uid="uid://cay2x8xtasb24" path="res://gamedata/movies/loadingscreen/please wait.png" id="6_2c0lg"]
[ext_resource type="FontFile" uid="uid://mbmph150x7yh" path="res://gamedata/fonts/BPdotsUnicaseSquare.otf" id="7_aiiqk"]
[ext_resource type="AudioStream" uid="uid://dfu34gbik2kxo" path="res://gamedata/sfx/universalthud.ogg" id="7_wcvjr"]
[ext_resource type="Texture2D" uid="uid://di78xl5i3birb" path="res://gamedata/movies/loadingscreen/star core.png" id="8_sotwq"]
[ext_resource type="Texture2D" uid="uid://c0t6humt1g7jn" path="res://gamedata/movies/loadingscreen/logo.png" id="9_lccgf"]

[sub_resource type="LabelSettings" id="LabelSettings_3cu0w"]
font = ExtResource("7_aiiqk")
font_size = 14
outline_size = 1

[sub_resource type="Animation" id="Animation_v1umk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Spaceleftblank1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/Spaceleftblank2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/Spaceleftblank3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/Spaceleftblank4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/PleaseWait:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/PleaseWait:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/PleaseWait:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.787271, 0.284591, 0, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/and the serpent said onto:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node2D/and the serpent said onto:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node2D/StarCore:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Node2D/Logo:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Node2D:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Node2D/Spaceleftblank8:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Node2D/Spaceleftblank7:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Node2D/Spaceleftblank6:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("AudioStreamPlayer:playing")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5grbk"]
resource_name = "begin"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Spaceleftblank1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333, 0.166667, 0.2, 0.3, 0.333333, 0.366667, 0.466667, 0.5, 0.533333, 0.633333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false, true, true, false, true, true, false, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/Spaceleftblank2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.133333, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D/Spaceleftblank3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667, 0.3, 0.366667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Node2D/Spaceleftblank4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.433333, 0.466667, 0.533333, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Node2D/PleaseWait:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Node2D/PleaseWait:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.733333, 1.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Node2D/PleaseWait:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.933333, 1.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.787271, 0.284591, 0, 1), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Node2D/and the serpent said onto:visible_ratio")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Node2D/and the serpent said onto:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Node2D/StarCore:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Node2D/Logo:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Node2D:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.0333333, 1.16667, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Node2D/Spaceleftblank8:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0.1, 0.133333, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Node2D/Spaceleftblank7:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0.266667, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Node2D/Spaceleftblank6:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0.433333, 0.466667, 0.533333, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("AudioStreamPlayer:playing")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlavl"]
_data = {
"RESET": SubResource("Animation_v1umk"),
"begin": SubResource("Animation_5grbk")
}

[node name="loadingscreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gp3sa")

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(320, 180)

[node name="Spaceleftblank1" type="Sprite2D" parent="Node2D"]
visible = false
z_index = 1
texture = ExtResource("2_dfvbi")

[node name="Spaceleftblank2" type="Sprite2D" parent="Node2D"]
visible = false
z_index = 1
texture = ExtResource("3_0qfbe")

[node name="Spaceleftblank3" type="Sprite2D" parent="Node2D"]
visible = false
z_index = 1
texture = ExtResource("4_2ymtf")

[node name="Spaceleftblank4" type="Sprite2D" parent="Node2D"]
visible = false
z_index = 1
texture = ExtResource("5_v1ipe")

[node name="Spaceleftblank6" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(0.898039, 0.278431, 0, 0.564706)
texture = ExtResource("3_0qfbe")

[node name="Spaceleftblank7" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(0.898039, 0.278431, 0, 0.564706)
scale = Vector2(1.08, 1.08)
texture = ExtResource("4_2ymtf")

[node name="Spaceleftblank8" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(0.898039, 0.278431, 0, 0.564706)
texture = ExtResource("5_v1ipe")

[node name="PleaseWait" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.787271, 0.284591, 0, 1)
scale = Vector2(0.24, 0.24)
texture = ExtResource("6_2c0lg")

[node name="and the serpent said onto" type="Label" parent="Node2D"]
modulate = Color(1, 1, 1, 0.270588)
offset_left = -312.0
offset_top = -180.0
offset_right = -32.0
offset_bottom = 162.0
text = "DIE SCHLANGE ABER WAR LISTIGER ALS ALLE TIERE DES FELDES, DIE GOTT DER HERR GEMACHT HATTE.
UND SIE SPRACH ZU DER FRAU: JA, HAT GOTT WIRKLICH GESAGT: IHR SOLLT NICHT ESSEN VON ALLEN BÄUMEN IM GARTEN?
DA SPRACH DIE FRAU ZUR SCHLANGE: WIR DÜRFEN ESSEN VON DEN FRÜCHTEN DER BÄUME IM GARTEN.
ABER VON DEN FRÜCHTEN DES BAUMES, DER IN DER MITTE DES GARTENS STEHT, HAT GOTT GESAGT: IHR SOLLT NICHT DAVON ESSEN, NOCH SIE BERÜHREN, DAMIT IHR NICHT STERBT.
DA SPRACH DIE SCHLANGE ZUR FRAU: IHR WERDET KEINESWEGS STERBEN."
label_settings = SubResource("LabelSettings_3cu0w")
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="StarCore" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(1, 1, 1, 0.654902)
self_modulate = Color(0.780766, 0.23191, 0, 1)
position = Vector2(-208, -132)
scale = Vector2(0.546875, 0.546875)
texture = ExtResource("8_sotwq")

[node name="Logo" type="Sprite2D" parent="Node2D"]
visible = false
modulate = Color(1, 1, 1, 0.396078)
self_modulate = Color(0.780766, 0.23191, 0, 1)
position = Vector2(-32, -140)
scale = Vector2(0.21875, 0.21875)
texture = ExtResource("9_lccgf")

[node name="synchronizer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jlavl")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wcvjr")
bus = &"effects"

[node name="blanchSynchronizer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="synchronizer" to="." method="_on_synchronizer_animation_finished"]
[connection signal="timeout" from="blanchSynchronizer" to="." method="_on_blanch_synchronizer_timeout"]
